--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     crossorigin="anonymous"> </script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css " rel="stylesheet">
   <style>
+    .fa {
+  font-size: 20px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.fa:hover {
+  color: darkblue;
+}
     body {
       background-image: url("https://source.unsplash.com/random/?nature");
       background-size: cover;
@@ -25,7 +34,6 @@
       height: 100vh;
       width: 100%;
       color: rgb(29, 146, 122);
-      
     }
 
     #quote-box{
@@ -63,18 +71,34 @@
   width: 150px;
   }
 }
+#loadingIndicator {
+  text-align: center;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Ensure the indicator is above other elements */
+}
   </style>
 </head>
-<body>
+<body id="body">
   <div id="wrapper" class="container-fluid">
     <div id="quote-box">
       <div class="row" >
         <p>
         <h1 class="text-danger text-center" id="heading">Thought of the day</h1>
-        <h3 id="text"><i class="fa fa-quote-left" aria-hidden="true"></i> The best and most beautiful things in the world cannot be seen or even touched — they must be felt with the heart. <i class="fa fa-quote-right" aria-hidden="true"></i></h3><h4 align="right" id="author">—Helen Keller</h4></p>
+        <h3 id="text"><i class="fa fa-quote-left" aria-hidden="true"></i> <i class="fa fa-quote-right" aria-hidden="true"></i></h3><h4 align="right" id="author"></h4></p>
       </div>
       <div class="row text-center" id="row1">
-        <div class="col" id="new-qu">
+        <div class="col" id="demo">
+          <button class="btn btn-primary" id="likeButton">Like</button>
+  <button class="btn btn-primary" id="dislikeButton">Dislike</button>
         <a
            href="https://twitter.com/intent/tweet"
         class="btn btn-primary" 
@@ -89,9 +113,17 @@
             Quote</button></div>
       </div>
     </div>
-    <div class="footer">by <a href="https://codepen.io/monika903" target="_blank">Monika</a></div>
+    <div id="loadingIndicator" class="d-none">
+      <p>Loading...</p>
+    </div>
+    <div class="footer">by <a href="https://codepen.io/monika903" target="_blank">Monika</a>
+      <button id="customBackButton">Go Back</button>
+    </div>
 </div>
   </div>
   <script src="script.js"></script>
+  <script src="home.js"></script>
+  <script src="back.js"></script>
+    
 </body>
 </html>
